--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
     }
 
     var buildUrl = "Build";
-    var loaderUrl = buildUrl + "/birdHubBuild.loader.js";
+    var loaderUrl = buildUrl + "/bhSite.loader.js";
     var config = {
       arguments: [],
-      dataUrl: buildUrl + "/birdHubBuild.data",
-      frameworkUrl: buildUrl + "/birdHubBuild.framework.js",
-      codeUrl: buildUrl + "/birdHubBuild.wasm",
+      dataUrl: buildUrl + "/bhSite.data",
+      frameworkUrl: buildUrl + "/bhSite.framework.js",
+      codeUrl: buildUrl + "/bhSite.wasm",
       streamingAssetsUrl: "StreamingAssets",
       companyName: "ytu",
       productName: "birdHub",
